# postech-ml-techchallenge-fase-1-api

./: Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py
api/config/: __init__.py  config.py
api/extensions/: __init__.py
api/logs/: __init__.py  routes_middleware.py
api/models/: __init__.py  book_recommendation.py  books.py  refresh_token_manager.py  route_access_log.py  user.py  user_access.py  user_preferences.py  users_access.py
api/routes/: auth.py  books.py  categories.py  genres.py  health.py  ml.py  scrape.py  stats.py
api/scripts/: auth_utils.py  books_utils.py  genres_utils.py  ml_utils.py  scrape_utils.py  stats_utils.py
data/: books.csv
data/ml_artifacts/: idx_series.pkl  tfidf_vectorizer.pkl
docs/: README.md
migrations/: env.py
migrations/versions/: 27ba5383f16b_austando_nome_do_model_route_acess_log_.py  2d95939272e0_adicionando_modelos_iniciais.py  42f09ea4d42b_austando_tabela_user_access.py  53f0fea14c7e_criação_de_schema_inicial.py  6292681dfe0b_adicionando_model_book_recommendations.py  c96e24745a07_criando_tabela_de_log_das_rotas.py
notebooks/: eda.ipynb  postgresql.ipynb  setup.ipynb  tech_challenge_fase_1.ipynb
scripts/: insert_data.py  webscraping.py
tests/: conftest.py  pytest.ini  test_auth.py  test_books.py  test_genres.py  test_ml.py  test_scrape.py  test_stats.py
