[project]
name = "postech-ml-techchallenge-fase-1"
version = "0.1.0"
description = "API para o Tech Challenge da Fase 1 da Pós-Graduação em Machine Learning Engineering da FIAP."
authors = [
    {name = "jorgeplatero", email = "jorge.platero@outlook.com"}
]
license = {text = "MIT"}
readme = "docs/README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-caching (>=2.3.1,<3.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "flask-limiter (>=4.1.1,<5.0.0)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sqlalchemy2-stubs (>=0.0.2a38,<0.0.3)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-flask (>=1.3.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
env_files = [".env"]
markers = [
    "integration: testes dos endpoints com integração com outros serviços",
    "auth: testes dos endpoints do módulo auth",
    "register: testes do endpoint do fluxo de registro de novos usuários",
    "login: testes do endpoint do fluxo de autenticação",
    "refresh: testes do endpoint do fluxo de renovação de tokens",
    "books: testes dos endpoints do módulo books",
    "titles: testes do endpoint de listagem de títulos de livros",
    "book_id: testes do endpoint de busca de detalhes de um livro por id",
    "search: testes do endpoint de busca por filtros de título ou gênero",
    "price_range: testes do endpoint de busca de livros com filtragem por faixa de preço",
    "top_rated: testes do endpoint de busca de livros mais bem avaliados",
    "genres: testes do endpoint de listagem de gêneros de livros",
    "ml: testes dos endpoints do módulo ml",
    "training_data: testes do fluxo de treinamento do modelo de ML",
    "user_preferences: testes do histórico de preferências do usuário",
    "predictions: testes do fluxo de recomendações de livros",
    "scrape: testes dos endpoints do módulo scrape",
    "stats: testes dos endpoints do módulo stats",
    "stats_overview: testes do endpoint de estatísticas gerais",
    "stats_genres: testes do endpoint de estatísticas por gênero"
]